# SewUp

./: .gitignore  .gitmodules  .typos.toml  Cargo.toml  README.md  build.rs  crates.js  flake.nix  index.html  search-index.js  settings.html  shell.nix  source-files.js
cargo-sewup/: Cargo.toml
cargo-sewup/src/: build.rs  config.rs  constants.rs  deploy.rs  errors.rs  generate.rs  init.rs  inspect.rs  lib.rs  main.rs
erc20-contract/: Cargo.toml
erc20-contract/.cargo/: config
erc20-contract/src/: erc20.rs  token.rs  utils.rs
examples/ballot-contract/: .gitignore  Cargo.toml
examples/ballot-contract/.cargo/: config
examples/ballot-contract/src/: errors.rs  lib.rs
examples/default-contract/: Cargo.toml  sewup.toml
examples/default-contract/src/: errors.rs  lib.rs
examples/erc20-contract/: Cargo.toml
examples/erc20-contract/src/: token.rs
examples/erc721-contract/: Cargo.toml
examples/erc721-contract/src/: token.rs
examples/hello-contract/: Cargo.toml
examples/hello-contract/src/: client.rs  lib.rs
examples/kv-client/: Cargo.toml
examples/kv-client/src/: main.rs
examples/kv-contract/: Cargo.toml
examples/kv-contract/src/: client.rs  errors.rs  inputs.rs  lib.rs
examples/rdb-contract/: Cargo.toml  sewup.toml
examples/rdb-contract/src/: client.rs  errors.rs  lib.rs  modules.rs  tables.rs
examples/rusty-contract/: Cargo.toml
examples/rusty-contract/.cargo/: config
examples/rusty-contract/src/: lib.rs
examples/sb-contract/: Cargo.toml  sewup.toml
examples/sb-contract/src/: lib.rs
kv-contract/: Cargo.toml
kv-contract/src/: errors.rs  lib.rs
sewup/: Cargo.toml  all.html  build.rs  derive.Deserialize.html  derive.DeserializeTrait.html  derive.Serialize.html  derive.SerializeTrait.html  enum.Value.html  fn.to_value.html  index.html  macro.ewasm_dbg!.html  macro.ewasm_dbg.html  sidebar-items.js  trait.DeserializeOwned.html  trait.DeserializeTrait.html  trait.SerializeTrait.html  type.Result.html
sewup-derive/: Cargo.toml
sewup-derive/src/: function_tests.rs  lib.rs  tests.rs
sewup-derive/tests/: ui.rs
sewup-derive/tests/compile-fail/: ewasm-fn-sig.stderr  ewasm_fn_sig.rs  ewasm_fn_sig.stderr  ewasm_input_from.rs  ewasm_input_from.stderr  ewasm_main.rs  ewasm_main.stderr  ewasm_main_with_inputs.rs  ewasm_main_with_inputs.stderr  ewasm_output_from.rs  ewasm_output_from.stderr
sewup-derive/tests/compile-pass/: ewasm-fn-sig.rs  ewasm_fn.rs  ewasm_fn_sig.rs  ewasm_input_from.rs  ewasm_output_from.rs
sewup-derive/tests/unsupport-compile-pass/: sized_string.rs  table.rs
sewup/errors/: enum.ContractError.html  enum.HandlerError.html  index.html  sidebar-items.js
sewup/kv/: enum.Feature.html  index.html  sidebar-items.js  struct.Bucket.html  struct.Iter.html  struct.Store.html  type.RawBucket.html  type.SewUpVec.html
sewup/kv/bucket/: struct.Bucket.html  struct.Iter.html  type.RawBucket.html  type.SewUpVec.html
sewup/kv/store/: enum.Feature.html  struct.Store.html
sewup/kv/traits/: index.html  sidebar-items.js
sewup/primitives/: index.html  sidebar-items.js  struct.Contract.html  struct.EwasmAny.html  trait.IntoEwasmAny.html  type.FunctionSignature.html
sewup/rdb/: enum.Feature.html  index.html  sidebar-items.js  struct.Db.html  struct.Table.html  struct.TableInfo.html
sewup/rdb/db/: struct.Db.html  struct.TableInfo.html
sewup/rdb/errors/: enum.Error.html  index.html
sewup/rdb/table/: struct.Table.html
sewup/rdb/traits/: constant.HEADER_SIZE.html  index.html  sidebar-items.js  trait.Record.html
sewup/runtimes/: index.html  sidebar-items.js
sewup/runtimes/handler/: index.html  sidebar-items.js  struct.ContractHandler.html
sewup/runtimes/test/: index.html  sidebar-items.js  struct.TestHost.html  struct.TestRuntime.html
sewup/runtimes/traits/: enum.Flags.html  enum.VmError.html  index.html  sidebar-items.js  struct.VMMessage.html  struct.VMMessageBuilder.html  struct.VMResult.html  trait.RT.html
sewup/src/: errors.rs  lib.rs  primitives.rs  tests.rs  traits.rs  types.rs  utils.rs
sewup/src/kv/: bucket.rs  errors.rs  mod.rs  store.rs  tests.rs
sewup/src/rdb/: db.rs  errors.rs  mod.rs  table.rs  traits.rs
sewup/src/runtimes/: handler.rs  mod.rs  test.rs  traits.rs
sewup/src/single_bucket/: mod.rs
sewup/src/token/: erc1155.rs  erc20.rs  erc721.rs  helpers.rs  mod.rs  signature.rs  tests.rs
sewup/src/types/: address.rs  errors.rs  mod.rs  raw.rs  row.rs  sized_str.rs  tests.rs
sewup/token/: index.html  sidebar-items.js
sewup/token/erc1155/: constant.BALANCE_OF_ABI.html  constant.BALANCE_OF_BATCH_ABI.html  constant.BALANCE_OF_BATCH_SIG.html  constant.BALANCE_OF_SIG.html  constant.SAFE_BATCH_TRANSFER_FROM_ABI.html  constant.SAFE_BATCH_TRANSFER_FROM_SIG.html  constant.SAFE_TRANSFER_FROM_ABI.html  constant.SAFE_TRANSFER_FROM_SIG.html  fn.balance_of.html  fn.balance_of_batch.html  fn.safe_batch_transfer_from.html  fn.safe_transfer_from.html  index.html  sidebar-items.js
sewup/token/erc20/: constant.ALLOWANCE_ABI.html  constant.ALLOWANCE_SIG.html  constant.APPROVE_ABI.html  constant.APPROVE_SIG.html  constant.BALANCE_OF_ABI.html  constant.BALANCE_OF_SIG.html  constant.DECIMALS_ABI.html  constant.DECIMALS_SIG.html  constant.NAME_ABI.html  constant.NAME_SIG.html  constant.SYMBOL_ABI.html  constant.SYMBOL_SIG.html  constant.TOTAL_SUPPLY_ABI.html  constant.TOTAL_SUPPLY_SIG.html  constant.TRANSFER_ABI.html  constant.TRANSFER_FROM_ABI.html  constant.TRANSFER_FROM_SIG.html  constant.TRANSFER_SIG.html  fn.allowance.html  fn.approve.html  fn.name.html  (+8 more)
sewup/types/: index.html  sidebar-items.js  struct.Address.html  struct.AddressType.html  struct.Raw.html  struct.Row.html  struct.SizedString.html  type.Address.html
sewup/utils/: derive.Serialize.html  enum.Value.html  fn.copy_into_array.html  fn.get_field_by_name.html  fn.get_function_signature.html  fn.pretty_print_storage.html  fn.sha3_256.html  fn.storage_index_to_addr.html  fn.to_value.html  index.html  sidebar-items.js  trait.DeserializeOwned.html  trait.Serialize.html
tests-build/: Cargo.toml
tests-build/src/: lib.rs
tests-build/tests/: rdb.rs
(+8918 files in other folders)
