[workspace]

members = [
    "sewup",
    "sewup-derive",
    "cargo-sewup",

    # Internal
    "tests-build",
]
exclude = [
    "examples/hello-contract",
    "examples/default-contract",
    "examples/erc20-contract",
    "examples/erc721-contract",
    "examples/erc1155-contract",
    "examples/kv-contract",
    "examples/rdb-contract",
    "examples/rusty-contract",
    "examples/ballot-contract",
]
