[package]
name = "cargo-sewup"
version = "0.0.10"
edition = "2018"
description = "A cli tool build sewup project to a deploy wasm"
license = "Apache-2.0"
repository = "https://github.com/second-state/SewUp"
readme = "../README.md"

[dependencies]
anyhow = "1.0.40"
hex = "0.4.3"
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3.22"
tokio = { version = "1.0", features = ["fs", "process", "macros", "time"] }
web3 = "0.16.0"
secp256k1 = "0.20.3"
thiserror = "1.0.26"
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.66"
wat = "1.0.38"
regex = "1.5.4"
tempfile = "3.2.0"
linked_hash_set = "0.1.4"
wasmparser = "0.80.0"
