[package]
name = "erc20-contract"
version = "0.1.0"
authors = []
edition = "2018"
description = "This is based on the previous works of second state, but **Not** an exanple for SewUp, I use the project toe setup developing environment for SewUp."

[lib]
path = "src/token.rs"
crate-type = ["cdylib"]

[dependencies]
ewasm_api = { version = "0.11.0", default-features = false, features = ["std", "qimalloc"], package = "ss_ewasm_api" }
sewup = { version =  "0.0.1", features = [ "token" ] }
sewup-derive = "0.0.1"
anyhow = "1.0.40"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.erc20-contract]
incremental = false
opt-level = "z"
