[package]
name = "kv-contract"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
description = "The example contract using sewup kv feature"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
sewup = { path = '../sewup', features = ['kv'] }
sewup-derive = { path = '../sewup-derive' }
anyhow = "1.0.40"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.kv-contract]
incremental = false
opt-level = "z"
