[package]
name = "kv-contract"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
description = "The example contract using sewup kv feature"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
sewup = { path = '../sewup', features = ['kv'] }
sewup-derive = { path = '../sewup-derive' }
ewasm_api = { git = "https://github.com/second-state/ewasm-rust-api.git", rev = "fbd49ae75dc47fb02b35f9006f510ca90a0187de", default-features = false, features = ["std", "qimalloc"] }
anyhow = "1.0.40"
thiserror = "1.0.24"
serde = "1.0"
serde_derive = "1.0"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.kv-contract]
incremental = false
opt-level = "z"
