[package]
name = "sewup-derive"
version = "0.0.2"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
description = "Macros implementation for SewUp"
license = "Apache-2.0"
repository = "https://github.com/second-state/SewUp"

[lib]
proc-macro = true

[dependencies]
regex = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
hex-literal = "0.3.1"
