[package]
name = "sewup-derive"
version = "0.0.5"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
description = "Macros implementation for SewUp"
license = "Apache-2.0"
repository = "https://github.com/second-state/SewUp"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
regex = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
proc-macro2 = "1.0.27"
proc-macro-error = "1.0.4"
syn = { version =  "1.0.73", features = ["full"] }
quote = "1.0.9"

[dev-dependencies]
hex-literal = "0.3.1"
trybuild = "1"
rustversion = "1"

[features]
kv = []
rdb = []
test = []
