[package]
name = "sewup-derive"
version = "0.1.14"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"
description = "Macros implementation for SewUp"
license = "Apache-2.0"
repository = "https://github.com/second-state/SewUp"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
fancy-regex = "0.7.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
proc-macro2 = "1.0.27"
proc-macro-error = "1.0.4"
syn = { version =  "1.0.73", features = ["full"] }
quote = "1.0.9"
paste = "1.0"
hex = "0.4.3"
convert_case = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.74"

[dev-dependencies]
hex-literal = "0.3.1"
trybuild = "1.0.52"
rustversion = "1"
sewup = { path = "../sewup" }
anyhow = "1.0.40"
serde-value = "0.7.0"

[features]
kv = []
rdb = []
token = []
test = ["rdb", "kv"]
debug = []
single-bucket = ["kv"]

[package.metadata.docs.rs]
all-features = true
