[package]
name = "sewup"
version = "0.0.5"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
build="build.rs"
description = "A library to help you sew up your Ethereum project with Rust and just like develop in a common backend."
license = "Apache-2.0"
repository = "https://github.com/second-state/SewUp"
readme = "../README.md"

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.40"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.8"
ewasm_api = { version = "0.11.0", default-features = false, features = ["std", "qimalloc"], package = "ss_ewasm_api" }
tiny-keccak = { version = "2.0.2", features = ["sha3", "keccak"] }
sewup-derive = { version = "0.0.5" }
bincode = "1.3"
cryptoxide = "0.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ethereum-types = { version = "0.11.0", features = ["serialize"] }
contract-address = "0.6.0"
evmc-sys = { version = "6.3.1-rc4", package = "ssvm-evmc-sys" }
rust-ssvm = "0.1.0-rc2"
hex = "0.4.3"

[build-dependencies]
cmake = "0.1.42"

[features]
default = [ ]
token = [ ]
kv = []
rdb = []
