
[package]
name = "ballot-contract"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
sewup = { version = "*", path = "../../sewup", features = [ "kv" ] }
sewup-derive = { version = "*", path = "../../sewup-derive", features = [ "kv" ] }
hex = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
anyhow = "*"
thiserror = "*"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.ballot-contract]
incremental = false
opt-level = "z"

[features]
constructor = []
constructor-test = []
