[package]
name = "erc20-contract"
version = "0.1.0"
authors = []
edition = "2018"
description = "This is based on the previous works of second state, but **Not** an exanple for SewUp, I use the project toe setup developing environment for SewUp."

[lib]
path = "src/token.rs"
crate-type = ["cdylib"]

[dependencies]
sewup ={ version = "*", path = "../../sewup", features = [ "token" ] }
sewup-derive = { version = "*", path = "../../sewup-derive" }
anyhow = "1.0.40"
ewasm_api = { version = "0.11.0", default-features = false, features = ["std", "qimalloc"], package = "ss_ewasm_api" }

[dev-dependencies]
hex-literal = "0.3.1"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.erc20-contract]
incremental = false
opt-level = "z"

[deploy]
url = "http://localhost:8545"
private = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
address = "0xXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
