[package]
name = "erc721-contract"
version = "0.1.0"
authors = []
edition = "2018"
description = "This is an ERC-721 example for SewUp"

[lib]
path = "src/token.rs"
crate-type = ["cdylib"]

[dependencies]
sewup ={ version = "*", path = "../../sewup", features = [ "token" ] }
sewup-derive = { version = "*", path = "../../sewup-derive" }
anyhow = "1.0.40"

[dev-dependencies]
hex-literal = "0.3.1"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.erc721-contract]
incremental = false
opt-level = "z"

[features]
constructor = []
constructor-test = []
