[package]
name = "kv-client"
version = "0.1.0"
edition = "2018"

[dependencies]
web3 = "0.16.0"
anyhow = "1.0.40"
tokio = { version = "1.0", features = ["full"] }
secp256k1 = "0.20.3"
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.66"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"
