[package]
name = "kv-contract"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"
description = "The example contract using sewup kv feature"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "kv-client"
path = "src/client.rs"
required-features = ["client"]

[dependencies]
anyhow = "1.0.40"
serde = "1.0"
serde_derive = "1.0"

sewup = { version = "*", path = "../../sewup", features = [ "kv" ] }
sewup-derive = { version = "*", path = "../../sewup-derive", features = [ "kv" ] }
thiserror = "1.0.24"

cargo-sewup = { version = "0.1.2-1", path = "../../cargo-sewup", optional = true }
web3 = { version = "0.16.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
secp256k1 = { version = "0.20.3", optional = true }
reqwest = { version = "0.11.4", features = ["json"], optional = true }
serde_json = { version = "1.0.66", optional = true }
bincode = { version = "1.3", optional = true }

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.kv-contract]
incremental = false
opt-level = "z"

[features]
client = [ "web3", "tokio", "secp256k1", "reqwest", "serde_json", "bincode", "cargo-sewup"]
constructor = []
constructor-test = []
