[package]
name = "rdb-contract"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"
description = "The example contract using sewup rdb feature"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
sewup ={ version = "*", path = "../../sewup", features = [ "rdb" ] }
sewup-derive = { version = "*", path = "../../sewup-derive", features = [ "rdb" ] }
anyhow = "1.0.40"
thiserror = "1.0.24"
serde = "1.0"
serde_derive = "1.0"
serde-value = "0.7.0"
paste = "1.0"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.rdb-contract]
incremental = false
opt-level = "z"
