[package]
name = "rusty-contract"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2021"
description = "The rusty return example contract using sewup default feature"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
sewup ={ version = "*", path = "../../sewup" }
sewup-derive = { version = "*", path = "../../sewup-derive" }
serde = "1.0"
serde_derive = "1.0"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.rusty-contract]
incremental = false
opt-level = "z"

[features]
constructor = []
constructor-test = []
